# src/cart/dto/update-cart-quantity.dto.ts
@@ -1,0 +1,3 @@
+export class UpdateCartQuantityDto {
+  quantity: number;
+}
