# src/products/dto/add-to-cart.dto.ts
@@ -1,0 +1,4 @@
+export class AddToCartDto {
+  size: string;
+  quantity?: number;
+}
